--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "chai": "~1.7.0",
-    "karma": "~0.8.6"
+    "karma": "~0.8.6",
+    "sinon": "~1.7.3",
+    "webdriverjs": "~0.7.8"
   },
   "devDependencies": {},
   "scripts": {
