--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "chai": "~1.7.0",
     "karma": "~0.8.6",
     "sinon": "~1.7.3",
-    "webdriverjs": "~0.7.8"
+    "webdriverjs": "~0.7.8",
+    "mocha": "~1.11.0"
   },
   "devDependencies": {},
   "scripts": {
